fix problem(item is covered by hidden bar)

--- a/scss/tags.scss
+++ b/scss/tags.scss
@@ -68,6 +68,7 @@
       &:checked + .hidden {
         transform: translateY(30px);
         opacity: 1;
+        display: flex;
       }
     }
     .bag {
@@ -91,8 +92,9 @@
     background: $bg-color;
     @extend %vertical-center;
     justify-content: space-between;
+    display: none;
     opacity: 0;
-    transition: all 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition: opacity, transform 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
     div {
       //height: 100%;
       cursor: pointer;
